finished with habits section and made it responsive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="inter-font">
     <header>
         <nav class="navbar">
-            <h3 class="navbar-heading">Fitness</h3>
+            <h3 class="navbar-heading"><em>Fitness</em></h3>
             <ul>
                 <li><button class="navbar-btn"><a href="">Home</a></button></li>
                 <li><a href="">Service</a></li>
@@ -31,7 +31,9 @@
                 </div>
             </div>
             <div class="banner-img">
-                <img src="images/Images 2.png" alt="">
+                <div class="banner-img-container">
+                    <img src="images/Images 2.png" alt="">
+                </div>
                 <div class="upper-desc">
                     <h4 class="upper-heading">500+</h4>
                     <p class="upper-txt">Free Workout Videos</p>
@@ -53,26 +55,34 @@
         <section class="habits">
             <div class="habits-info">
                 <h3 class="primary-heading">Change Your Habits</h3>
-                <p class="primary-txt">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+                <p class="primary-txt">We believe fitness should be accessible to everyone, everywhere, regardless of income or <br>access to a gym.</p>
             </div>
             <div class="habits-container">
                 <div class="card">
-                    <img src="" alt="">
+                    <div class="img-container">
+                        <img src="images/image 3.png" alt="">
+                    </div>
                     <h5 class="img-heading">Movement</h5>
                     <p class="img-txt">We believe fitness should be accessible to everyone</p>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
+                    <div class="img-container">
+                        <img src="images/image 2.png" alt="">
+                    </div>
                     <h5 class="img-heading">Time</h5>
                     <p class="img-txt">We believe fitness should be accessible to everyone</p>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
+                    <div class="img-container">
+                        <img src="images/image 4.png" alt="">
+                    </div>
                     <h5 class="img-heading">Practice</h5>
                     <p class="img-txt">We believe fitness should be accessible to everyone</p>
                 </div>
                 <div class="card">
-                    <img src="" alt="">
+                    <div class="img-container">
+                        <img src="images/image 5.png" alt="">
+                    </div>
                     <h5 class="img-heading">Weight Loss</h5>
                     <p class="img-txt">We believe fitness should be accessible to everyone</p>
                 </div>
