Finished run section

--- a/index.html
+++ b/index.html
@@ -88,6 +88,18 @@
                 </div>
             </div>
         </section>
+        <!-- Run section starts -->
+        <section class="run-container">
+            <div class="run-info">
+                <h3 class="primary-heading">Run an Extra <br>
+                    Mile Easily</h3>
+                <p class="primary-txt">We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
+                <button class="primary-btn">Join Now</button>
+            </div>
+            <div class="run-img">
+                <img src="images/run.jpg" alt="A man running">
+            </div>
+        </section>
     </main>
     <footer>
 
