--- a/index.html
+++ b/index.html
@@ -100,6 +100,65 @@
                 <img src="images/run.jpg" alt="A man running">
             </div>
         </section>
+        <!-- BMI section -->
+         <section class="bmi">
+            <div class="bmi-info">
+                <h3 class="primary-heading">BMI Calculator</h3>
+                <p class="primary-txt">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="calculator-container">
+                <div class="bmi-chart">
+                    <h4 class="bmi-heading">BMI Calculator Chart</h4>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>BMI</th>
+                                <th>Weight Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Below 18.5</td>
+                                <td>Underweight</td>
+                            </tr>
+                            <tr>
+                                <td>18.5 - 24.9</td>
+                                <td>Healthy</td>
+                            </tr>
+                            <tr>
+                                <td>25.0 - 29.9</td>
+                                <td>Overweight</td>
+                            </tr>
+                            <tr>
+                                <td>30.0 - and Above</td>
+                                <td>Obese</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="bmi-calculator">
+                    <h4 class="bmi-heading">Calculate your BMI</h4>
+                    <p class="primary-txt">We believe fitness should be accessible to everyone, everywhere, regardless of <br>income or access to a gym. </p>
+                    <form action="">
+                        <input type="text" name="" id="" placeholder="Height/cm">
+                        <input type="text" placeholder="Weight/kg">
+                        <br>
+                        <br>
+                        <input type="text" placeholder="Age">
+                        <select name="Sex" id="">
+                            <option value="">Sex</option>
+                        </select>
+                        <br>
+                        <br>
+                        <select name="Activity" id="">
+                            <option value="">Select an activity factor</option>
+                        </select>
+                    </form>
+                    <br><br><br>
+                    <button class="primary-btn">Calculate</button>
+                </div>
+            </div>
+         </section>
     </main>
     <footer>
 
