finished teams section

--- a/index.html
+++ b/index.html
@@ -159,6 +159,57 @@
                 </div>
             </div>
          </section>
+         <!-- Teams section -->
+          <section class="teams">
+            <div class="teams-intro">
+                <h3 class="primary-heading">Meet Our Team</h3>
+                <p class="primary-txt">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="teams-container">
+                <div class="teams-img-container">
+                    <img src="images/trainer1.png" alt="">
+                    <div class="staff-info">
+                        <h4 class="trainer-name">Jerome Bell</h4>
+                        <p class="role primary-txt">Trainer</p>
+                    </div>
+                </div>
+                <div class="teams-img-container">
+                    <img src="images/trainer2.png" alt="">
+                    <div class="staff-info">
+                        <h4 class="trainer-name">Cameron Williamson</h4>
+                        <p class="role primary-txt">Trainer</p>
+                    </div>
+                </div>
+                <div class="teams-img-container">
+                    <img src="images/trainer3.png" alt="">
+                    <div class="staff-info">
+                        <h4 class="trainer-name">Darrell Steward</h4>
+                        <p class="role primary-txt">Trainer</p>
+                    </div>
+                </div>
+                <div class="teams-img-container">
+                    <img src="images/trainer4.png" alt="">
+                    <div class="staff-info">
+                        <h4 class="trainer-name">Dianne Russell</h4>
+                        <p class="role primary-txt">Trainer</p>
+                    </div>
+                </div>
+                <div class="teams-img-container">
+                    <img src="images/trainer5.png" alt="">
+                    <div class="staff-info">
+                        <h4 class="trainer-name">Cody Fisher</h4>
+                        <p class="role primary-txt">Trainer</p>
+                    </div>
+                </div>
+                <div class="teams-img-container">
+                    <img src="images/trainer6.png" alt="">
+                    <div class="staff-info">
+                        <h4 class="trainer-name">Theresa Webb</h4>
+                        <p class="role primary-txt">Trainer</p>
+                    </div>
+                </div>
+            </div>
+          </section>
     </main>
     <footer>
 
