finished upto footer

--- a/index.html
+++ b/index.html
@@ -210,9 +210,31 @@
                 </div>
             </div>
           </section>
+          <!-- Footer section -->
+          <footer>
+            <section class="foot">
+                <div class="about">
+                    <h4 class="footer-heading"><em>Fitness</em></h4>
+                    <p class="primary-txt">We believe fitness should be accessible to everyone, <br>everywhere, regardless of income or access to a gym. With <br>hundreds of professional workouts.</p>
+                </div>
+                <div class="get-started1">
+                    <h4 class="get-started-heading">Get Started</h4>
+                    <p class="footer-txt">Service</p>
+                    <p class="footer-txt">Contact Us</p>
+                    <p class="footer-txt">Affiliate Program</p>
+                    <p class="footer-txt">About Us</p>
+                </div>
+                <div class="get-started2">
+                    <h4 class="get-started-heading">Get Started</h4>
+                    <p class="footer-txt">Fitness</p>
+                    <p class="footer-txt">Platform</p>
+                    <p class="footer-txt">Workout Library</p>
+                    <p class="footer-txt">App Design</p>
+                </div>
+            </section>
+            <hr>
+            <p class="ending-txt">All right reserved @Fitness 2024</p>
+        </footer>
     </main>
-    <footer>
-
-    </footer>
 </body>
 </html>
