Finished the assignment

--- a/index.html
+++ b/index.html
@@ -159,6 +159,28 @@
                 </div>
             </div>
          </section>
+         <!-- Unique section -->
+          <section class="unique">
+            <div class="why">
+                <h3 class="primary-heading">Why being physically fit is important?</h3>
+                <p class="primary-txt">Being physically fit has many perks, all of which contribute to a more <br> vibrant and active lifestyle.</p>
+            </div>
+            <div class="unique-container">
+                <div class="reasons-container">
+                    <div class="reasons">
+                        <h3 class="reason-heading">1) Mental Well-being</h3>
+                        <p class="reason-txt">Regular physical exercise tends to elevate our mood, and also reduces stress levels.</p>
+                    </div>
+                    <div class="reasons">
+                        <h3 class="reason-heading">2) Strength and Endurance</h3>
+                        <p class="reason-txt">Physical fitness improves muscle strength, and endurance which helps us in our daily lives</p>
+                    </div>
+                </div>
+                <div class="unique-img-container">
+                    <img src="images/physical_exercise2.jpg" alt="">
+                </div>
+            </div>
+          </section>
          <!-- Teams section -->
           <section class="teams">
             <div class="teams-intro">
